--- a/src/App.css
+++ b/src/App.css
@@ -63,11 +63,19 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap;
   height: 90vh;
   background: #4b4b4b;
   box-shadow: 2px -6px 20px 3px black;
   z-index: 999;
   color: white;
   position: relative;
+}
+
+@media screen and (max-width: 800px) {
+  .content {
+    display: flex !important;
+    justify-content: space-evenly !important;
+    align-items: center !important;
+    flex-direction: column !important;
+  }
 }
