--- a/src/layout/Playground/Playground.css
+++ b/src/layout/Playground/Playground.css
@@ -4,11 +4,12 @@
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 60vh;
-    box-shadow: 6px 5px 20px 3px black inset;
+    box-shadow: 5px -9px 20px 3px black inset;
     background: #1a1a1a;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 svg {
