--- a/src/layout/Customization/Customization.css
+++ b/src/layout/Customization/Customization.css
@@ -152,8 +152,14 @@
     background-color: black;
 }
 
-.color-selectors-container {
+.color-selectors-container,
+.background-selectors-container {
     padding-bottom: 20px;
     display: flex;
     justify-content: space-between;
+    font-size: 22px;
+}
+
+#image-upload {
+    width: 0px;
 }
