--- a/src/App.css
+++ b/src/App.css
@@ -64,17 +64,13 @@ body {
 .content {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
   height: 90vh;
   background: #4b4b4b;
   box-shadow: 2px -6px 20px 3px black;
   z-index: 999;
   color: white;
   position: relative;
-}
-
-.playground-segment {
-  margin-top: -7vh;
+  padding-top: 20px;
 }
 
 @media screen and (max-aspect-ratio: 16/8) {
