--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@ body {
   margin: 0px;
   overflow: hidden;
   font-family: nothing;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 * {
