--- a/src/App.css
+++ b/src/App.css
@@ -35,14 +35,17 @@ body {
 
 ::-webkit-scrollbar {
   width: 10px;
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-track {
   background: gray;
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
   background: #1a1a1a;
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -74,6 +77,7 @@ body {
   color: white;
   position: relative;
   padding-top: 20px;
+  border-radius: 4px;
 }
 
 @media screen and (max-aspect-ratio: 16/8) {
