--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -29,11 +29,12 @@
 
 .modal-content {
     max-width: 700px;
-    max-height: 400px;
+    max-height: 450px;
     padding: 5px 10px;
     background-color: black;
     color: white;
     overflow: auto;
+    border-radius: 6px;
 }
 .content-header {
     max-width: 700px;
